# lbm

./: .gitignore  CITATION.cff  LICENSE  README.md  compile.sh  log.raceCheck
postprocess/: README.md  ids.txt  pyproject.toml
postprocess/lbm_post.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
postprocess/post/: __init__.py  cli.py  paths.py
postprocess/post/benchmarks/: __init__.py  ghia_2d_cavity.py
postprocess/post/io/: __init__.py  formats.py  read_bin.py  read_stdout.py
postprocess/post/plots/: __init__.py  annul_pressure.py  annul_profile.py  centerlines.py  channel_profile.py  couette_profile.py  jet.py  tke.py
postprocess/tools/: run_all.py
src/: main.cu
src/app/: benchmark.cuh  cuda_config.cu  cuda_config.cuh  progress.cuh  run_context.cuh  simulation.cu  simulation.cuh  simulation_summary.cuh
src/core/: active_geometry.cuh  cuda_utils.cuh  geometry.h  indexing.cuh  lbm_config.cuh  lbm_features.cuh  lbm_stencil_select.cuh  linear_solver.cuh  math_utils.cuh  memory.cuh  physics.h  simulation_config.h  types.cuh
src/geometries/: active_geometry.cuh
src/io/: debug_domain.cu  debug_domain.cuh  debug_domain_dump.cuh  geometry_outputs.cu  geometry_outputs.cuh  output_annul_pressure_bin.cu  output_annul_pressure_bin.cuh  output_annul_profile_bin.cu  output_annul_profile_bin.cuh  output_centerline_bin.cu  output_centerline_bin.cuh  output_meta.cu  output_meta.cuh  output_tags_vtk.cu  output_tags_vtk.cuh  output_tke_bin.cu  output_tke_bin.cuh  output_vtk.cu  output_vtk.cuh
src/lbm/: lbm_equilibrium.cuh  (+7 more)
tools/: run_queue.sh  sanitize.sh
(+161 files in other folders)
