[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lbm-post"
version = "0.1.0"
description = "Postprocessing tools for LBM solver"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
  "numpy",
  "matplotlib"
]

[project.scripts]
lbm-post = "post.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["post*"]